repr-trait/test/primitive_repr_fail.rs
#[derive(repr_trait::PrimitiveRepr)]
enum Enum {
    A,
    B,
    C,
}

fn main() {

}
